--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,5 @@ kotlin.code.style=official
 
 # API Key - Ideally this wouldn't be committed but for simplicity's sake for this project it'll
 # be included here since the repository this is stored in will be made private after the project
-# is completed. If this key doesn't work for whatever reason, 
+# is completed. If this key doesn't work for whatever reason, please replace it.
 API_KEY=qqCcAvsv792nf3gohC8cBbX68lWGa1e6CpQiiYWw
