--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext {
+        kotlin_version = '1.3.72'
+        version_kotlin = "1.3.72"
+        version_kotlin_coroutines = "1.3.7"
+    }
+
     repositories {
         google()
         jcenter()
