--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         kotlin_version = '1.3.72'
         version_kotlin = "1.3.72"
         version_kotlin_coroutines = "1.3.7"
+        version_glide = "4.8.0"
     }
 
     repositories {
