--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.0"
     implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 
     implementation "androidx.recyclerview:recyclerview:1.1.0"
 
@@ -75,4 +76,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     implementation "com.github.bumptech.glide:glide:$version_glide"
+
+    implementation "com.jakewharton.timber:timber:$version_timber"
 }
