--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         version_kotlin = "1.3.72"
         version_kotlin_coroutines = "1.3.7"
         version_glide = "4.8.0"
+        version_timber = "4.7.1"
     }
 
     repositories {
